v0.13
	* FIX : Avert crashes by using guarded pointers
	* FIX : In case of a failed "Download more", do not delete layer if it was a previously existing one.
	* FIX : GeoTagged images are drawn to the full size of GeoImageDock
	* FIX : Background images with a too long hash filename were not cached.
	* FIX : Tracklayers are (after asking the user) made writeable when opening geotagged images to it
	* ADD : Images can be dropped on TrackPoints to add the coordinates from the trackpoint to the image and then load it as geotagged image (see #1602)
	* FIX : trackpoints which are associated with an image are highlighted according to the Style's settings (but not by painting an reactangle in paintEvent manually)
	* FIX : Much better zoom (and image-moving) for ImageView in GeoImageDock
	* FIX : Long image filenames are cutted to fit the GeoImageDock (fixes #1452)
	* FIX : ImageView in GeoImageDock draws images using an antialiasing painter and images are not copied when displaying them which results in faster drawing. (fixes #1452)
	* FIX : If there is only one opened layer, GeoImage uses it automatically (without asking the user) (fixes #1450)
	* FIX : Loading images with non-ascii filenames is now supported by GeoImage (fixes #1359)
	* FIX : Handle Undoes while creating single/double roads (fixes #1621)
	* FIX : Re-apply custom shortcuts after retranslateUI (fixes #1620)
	* FIX : Insufficent precision for WMS bbox requests at high zoom (fixes #1618)
	* ADD : Allow to force the custom Qt style thru Config.pri
	* FIX : Do not remove incomplete downloaded relation; make them readonly and display them in red (temporary)
	* FIX : Painting slowdowns (+ memory consumption) when relations are involved (fixes #1528)
	* FIX : Splitted roads not added to Relation (fixes #1586)
	* FIX : Tweaked windows menu to be "standard"
	* ADD : Splash screen